--- a/springboot_01_ssmp/src/main/resources/application.yml
+++ b/springboot_01_ssmp/src/main/resources/application.yml
@@ -14,6 +14,6 @@ logging:
 mybatis-plus:
   global-config:
     db-config:
-      id-type: assign-id
+      id-type: assign-uuid
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
