--- a/springboot_05_test/src/main/resources/application.yml
+++ b/springboot_05_test/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       url: jdbc:mysql://localhost:3306/spring_test?serverTimezone=UTC
       username: root
       password: root
+      type: com.alibaba.druid.pool.DruidDataSource
 logging:
   pattern:
     level: debug
