--- a/springboot_10_mq/pom.xml
+++ b/springboot_10_mq/pom.xml
@@ -42,6 +42,11 @@
 			<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
+		<!-- kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
