--- a/springboot_10_mq/src/main/resources/application.yaml
+++ b/springboot_10_mq/src/main/resources/application.yaml
@@ -12,3 +12,7 @@ spring:
     port: 5672
     username: guest
     password: guest
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: order_name
